临时更改为寝室使用手册

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 <body>
 <header id="header" style="    background-position: 0% -25px;">
 	<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""></a>
-	<h1>南边有个程序然</h1>
-	<p><strong>个人简历</strong></p>
+	<!--<h1>南边有个程序然</h1>-->
+	<h1>京四141住宿手册</h1>
+	<!--<p><strong>个人简历</strong></p>-->
+	<p><strong>来自师兄的告诫</strong></p>
 
 	<p class="view"><a href="https://github.com/liyiran210/lyr.cv">View the Project on GitHub <small>liyiran210/lyr.cv</small></a></p>
 
@@ -46,20 +48,33 @@
 </header>
 <div id="dowebok">
 	<div class="section">
-		<h3>个人资料</h3>
-		<p>啪啪啪~~~~~</p>
+		<h3>总则</h3>
+		<p>141非常欢迎你们的到来。<br>留了一堆大学英语3，4和四级书，不知道你们能不能用得上！绝对不是我懒得搬！恩！</p>
 	</div>
 	<div class="section">
-		<h3>技能</h3>
-		<p>啪啪啪啪~~~~~</p>
+		<h3>人与自然篇</h3>
+		<div style="text-align: left;font-size: 18px;padding-left: 5%;padding-right: 5%">
+			<p>寝室没人务必关好阳台门（有人也最好关上！）。毕竟一楼蟑螂无孔不入，可能一早起来就发现阳台上又有一只蟑螂尸体（或者千足虫什么的），务必买一个蟑螂屋或者除虫喷剂</p>
+			<p>台风，雨季来临，请在门口和阳台门口喷洒除虫喷剂，141经历过三次惨绝人寰的人蚁大战！</p>
+			<p>浴室下水道口经常会有成群的小飞虫，所以需要定期清洁打扫浴室卫生，在排水口喷洒除虫喷剂</p>
+			<p>回南天楼道很潮湿，自备除湿剂</p>
+			<p>晚上偶尔会听见婴儿哭声，不要害怕，那是母猫发情的叫声。</p>
+			<p>通往京华的路上！旁边的灌木丛还有墙上的洞里有蛇！（最后两点一年估计也就遇上一次O.O）</p>
+		</div>
 	</div>
 	<div class="section">
-		<h3>项目展示</h3>
-		<p>啪啪啪啪~~~~~</p>
+		<h3>人与生活篇</h3>
+		<div style="text-align: left;font-size: 25px;padding-left: 5%;padding-right: 5%">
+		<p>阳台门very very very重！</p>
+		<p>外卖地址默认京四B口，夜间（23:30以后）外卖领取出门左走上楼梯到二楼走到A区一楼楼梯下面，那边玻璃坏的，可以递外卖(不知道会不会为你们再度封上)</p>
+		<p>天花板非常高！站在床上玩都可以，唱歌有回音（我们晚上乱嚎竟然都没被人打！）</p>
+		<p>阿姨每个月都会来查水表，水费加上补贴的话，每次基本都是几块钱O.O</p>
+		<p>电费讲道理的话不开空调基本200块能过好几个月，全天开空调26度的话20块钱只能坚持2-3天！心痛！</p>
+			</div>
 	</div>
 	<div class="section">
-		<h3>其他</h3>
-		<p>这是最后一屏</p>
+		<h3>最后</h3>
+		<p>祝你们生活愉快。<br>别像我们快毕业了还被逼迫搬寝室！</p>
 	</div>
 </div>
 
