--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<title>fullPage.js — 项目导航演示_dowebok</title>
+	<title>电子简历</title>
 	<link rel="stylesheet" href="css/github-light.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/jquery.fullPage.css">
@@ -10,6 +10,8 @@
 		.section { text-align: center; font: 50px "Microsoft Yahei"; color: #fff;}
 	</style>
 	<script src="js/jquery-1.8.3.min.js"></script>
+	<script src="js/index.js"></script>
+	<script src="js/prefixfree.min.js"></script>
 	<script src="js/jquery.fullPage.min.js"></script>
 	<script>
 		$(function(){
@@ -26,11 +28,8 @@
 <body>
 <header id="header" style="    background-position: 0% -25px;">
 	<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""></a>
-	<!--<h1>南边有个程序然</h1>-->
-	<h1>京四141住宿手册</h1>
-	<!--<p><strong>个人简历</strong></p>-->
-	<p><strong>来自师兄的告诫</strong></p>
-
+	<h1>南边有个程序然</h1>
+	<p><strong>个人简历</strong></p>
 	<p class="view"><a href="https://github.com/liyiran210/lyr.cv">View the Project on GitHub <small>liyiran210/lyr.cv</small></a></p>
 
 	<ul id="menu">
@@ -47,34 +46,47 @@
 	</ul>
 </header>
 <div id="dowebok">
-	<div class="section">
-		<h3>总则</h3>
-		<p>141非常欢迎你们的到来。<br>留了一堆大学英语3，4和四级书，不知道你们能不能用得上！绝对不是我懒得搬！恩！</p>
+	<div class="section person">
+		<h3>个人资料</h3>
+		<div class="ziliao">
+			<p>姓    名： 李伊然</p>
+			<p>性    别： 男</p>
+			<p>出生日期：1995年2月10日</p>
+			<p>电    话：13726286010</p>
+			<p>E-mail  ：495854604@qq.com</p>
+			<p>毕业院校：北京师范大学珠海分校</p>
+			<p>毕业时间：2017年7月</p>
+			<p>专	  业：软件工程-商务软件开发方向</p>
+		</div>
+		<div class="pic"><img src="images/avatar.jpg" alt=""></div>
+
 	</div>
 	<div class="section">
-		<h3>人与自然篇</h3>
-		<div style="text-align: left;font-size: 18px;padding-left: 5%;padding-right: 5%">
-			<p>寝室没人务必关好阳台门（有人也最好关上！）。毕竟一楼蟑螂无孔不入，可能一早起来就发现阳台上又有一只蟑螂尸体（或者千足虫什么的），务必买一个蟑螂屋或者除虫喷剂</p>
-			<p>台风，雨季来临，请在门口和阳台门口喷洒除虫喷剂，141经历过三次惨绝人寰的人蚁大战！</p>
-			<p>浴室下水道口经常会有成群的小飞虫，所以需要定期清洁打扫浴室卫生，在排水口喷洒除虫喷剂</p>
-			<p>回南天楼道很潮湿，自备除湿剂</p>
-			<p>晚上偶尔会听见婴儿哭声，不要害怕，那是母猫发情的叫声。</p>
-			<p>通往京华的路上！旁边的灌木丛还有墙上的洞里有蛇！（最后两点一年估计也就遇上一次O.O）</p>
+		<h3>个人简介</h3>
+		<p style="font-size: 25px;">曾担任北京师范大学珠海分校自强社人资部部长，有较好的管理理念。学习能力强，喜欢探索与信息技术有关的软件的使用，喜欢开发。</p>
+		<h5>教育/实习经历</h5>
+		<p style="font-size: 25px;">2013/09 — 至今   	  北京师范大学珠海分校   信息技术学院 	软件工程 		本科</p>
+
+	</div>
+	<div class="section">
+		<h3>技能</h3>
+		<div class='container'>
+			<div class='bar mint' data-percent='95' data-skill='HTML/CSS'></div>
+			<div class='bar red' data-percent='65' data-skill='Bootstrp'></div>
+			<div class='bar lila' data-percent='75' data-skill='jQuery'></div>
+			<div class='bar orange' data-percent='60' data-skill='JAVA'></div>
+			<div class='bar gray' data-percent='45' data-skill='MySQL'></div>
 		</div>
 	</div>
-	<div class="section">
-		<h3>人与生活篇</h3>
+	<div class="section project">
+		<h3>项目展示</h3>
 		<div style="text-align: left;font-size: 25px;padding-left: 5%;padding-right: 5%">
-		<p>阳台门very very very重！</p>
-		<p>外卖地址默认京四B口，夜间（23:30以后）外卖领取出门左走上楼梯到二楼走到A区一楼楼梯下面，那边玻璃坏的，可以递外卖(不知道会不会为你们再度封上)</p>
-		<p>天花板非常高！站在床上玩都可以，唱歌有回音（我们晚上乱嚎竟然都没被人打！）</p>
-		<p>阿姨每个月都会来查水表，水费加上补贴的话，每次基本都是几块钱O.O</p>
-		<p>电费讲道理的话不开空调基本200块能过好几个月，全天开空调26度的话20块钱只能坚持2-3天！心痛！</p>
-			</div>
-	</div>
-	<div class="section">
-		<h3>最后</h3>
-		<p>祝你们生活愉快。<br>别像我们快毕业了还被逼迫搬寝室！</p>
+		<p><a href="">辉煌公司官网</a></p>
+		<p><a>广校通</a></p>
+		<p><a>租房系统</a></p>
+		<p><a>凤凰山创业谷官网</a></p>
+		<p>等</p>
+		</div>
 	</div>
 </div>
 
@@ -124,6 +136,29 @@
 
 		width: calc(100% - 32%);
 	}
+	#dowebok .person .ziliao{
+		float: left;
+		width: 50%;
+		margin-left: 15%;
+	}
+	#dowebok .person p{
+		font-size: 25px;
+		text-align: left;
+	}
+	#dowebok .person .pic{
+		float: right;
+		width: 150px;
+		height: 150px;
+		margin-right: 10%;
+
+	}
+	#dowebok .person .pic img{
+		width: 100%;
+		object-fit: cover;
+	}
+	#dowebok .project p a{
+		color: white;
+	}
 	#menu { position: absolute; right: -20px; top: 50%; width: 40px; margin-top: -170px; padding: 0; list-style-type: none;}
 	#menu li { float: left;}
 	#menu a { display: block; width: 28px; height: 28px; margin: 20px 6px; border-radius: 14px; text-indent: -9999px; overflow: hidden; background-color: #a0afb9; background-position: 50%; background-repeat: no-repeat;}
@@ -131,8 +166,13 @@
 	#menu .a2 { background-image: url(images/df-02.png);}
 	#menu .a3 { background-image: url(images/df-03.png);}
 	#menu .a4 { background-image: url(images/df-04.png);}
-	#menu a:hover, #menu .active a { margin: 14px 0; border: 6px solid #fff; box-shadow: 1px 1px 3px 1px #b4d7ed; border-radius: 20px; background-color: #239ae6;}
-
+	#menu a:hover, #menu .active a {
+		margin: 14px 0;
+		border: 6px solid #fff;
+		box-shadow: 1px 1px 3px 1px #b4d7ed;
+		border-radius: 20px;
+		background-color: #239ae6;
+	}
 
 </style>
 </html>
