--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div class="section project">
 		<h3>项目展示</h3>
 		<div style="text-align: left;font-size: 25px;padding-left: 5%;padding-right: 5%">
-		<p><a href="liyiran210.github.io/huihuang/index.html">辉煌公司官网</a></p>
+		<p><a href="https://liyiran210.github.io/huihuang/index.html">辉煌公司官网</a></p>
 		<p><a>广校通</a></p>
 		<p><a>租房系统</a></p>
 		<p><a>凤凰山创业谷官网</a></p>
