--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 		<h3>项目展示</h3>
 		<div style="text-align: left;font-size: 25px;padding-left: 5%;padding-right: 5%">
 		<p><a href="https://liyiran210.github.io/huihuang/index.html">辉煌公司官网</a></p>
-		<p><a>广校通</a></p>
-		<p><a>租房系统</a></p>
-		<p><a>凤凰山创业谷官网</a></p>
+		<p><a href="javascript:alert('暂时没有导入')">广校通</a></p>
+		<p><a href="javascript:alert('暂时没有导入')">租房系统</a></p>
+		<p><a href="https://172.17.12.100/cyg">凤凰山创业谷官网</a></p>
 		<p>等</p>
 		</div>
 	</div>
